fix: adjust message component padding for improved layout and readability

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -165,7 +165,7 @@
   }
 
   .mask-to-top-bottom {
-    mask-image: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 4%, rgba(0, 0, 0, 1) 12%),
+    mask-image: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 3%, rgba(0, 0, 0, 1) 10%),
       linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 1) 15%);
     mask-composite: intersect;
   }
